# yoshimi

./: .gitignore  Changelog  README.txt
Util/: midiListGen.cpp
banks/: doit  zzz
banks/Will_Godfrey_Companion/: 0094-Yet Another Flute.xiz
debian/: changelog  clean  control  copyright  copyright_hints  gbp.conf  rules  watch  yoshimi-data.install  yoshimi-data.lintian-overrides  yoshimi-doc.doc-base  yoshimi-doc.install  yoshimi.1  yoshimi.desktop  yoshimi.install  yoshimi.lintian-overrides  yoshimi.manpages  yoshimi.uu
debian/patches/: 0001-Fix-Appdata-Xml-License-Name.patch  0001-Fix-LV2-types.patch  0001-Lower-CMake-version-requirement.patch  0001-Research-use-a-hard-coded-fixed-seed-for-testing-ana.patch  0001-VERSION-HIV.old.patch  0001-lower-CMake-minimum-requirement.patch  0001-minor-UI-fixes.patch  0001-sneak-C-17-past-old-CMake.patch  0001-spelling.patch  0002-Allow-for-gzip-compressed-user-manual.patch  0002-Bugfix-Lost-CLI-startup-load-options.patch  0002-Fix-spelling-error-in-yoshimi.1.patch  0002-RC-Fix-4-Vkeyboard-Formant-filter.patch  0002-Research-revert-the-changed-anti-denormal-handling.patch  0002-VERSION-HIV.old.patch  0002-compile-fix-for-older-GCC.patch  0002-sneak-C-17-past-old-CMake.patch  0003-RC-Fix-5-Adaptive-harmonics-Bug-in-Envelope-see-Drum.patch  0003-Research-revert-the-changed-anti-denormal-handling.patch  0003-compile-fix-old-fltk.patch  0003-spelling.patch  0004-Accumulated-development-from-1.5.9-release-to-28.10..patch  0004-RC-Fix-6-Master-volume-fine-detune-Envelope-Fix-GUI-.patch  0004-Research-Revert-Fix-inconsistent-envelope-timing-und.patch  0004-compile-fix_no-move-ctor.patch  0005-Accumulated-development-deletions.patch  0005-RC-Fix-7-GUI-fixes-MIDI-learn-User-Guide.patch  0005-Research-Revert-Fix-missing-phase-randomness-when-im.patch  0006-Accumulated-development-from-28.10.2018-to-1.5.10.RC1.patch  0007-Revert-all-changes-to-the-random-number-generator.patch  0007-Upstream-Changes-for-RC2-18.12.18.patch  0007-re-enable-reseed.patch  0008-Re-Apply-the-initial-change-to-the-new-PRNG.patch  0008-Revert-all-changes-to-the-random-number-generator.patch  0008-also-enable-debug-output-of-generated-random-numbers.patch  0009-mark-as-special-test-build.patch  0010-Refactoring-extract-PRNG-as-nested-class.patch  0010-minimum-of-change-to-get-the-new-prng-in-place.patch  0011-Add-the-Jenkins-32bit-PRNG-and-use-it-for-all-random.patch  0012-TrinomialPRNG-Integrate-a-simplified-version-of-rand.patch  (+27 more)
debian/source/: lintian-overrides
debian/tests/: control  play.md5  play.yosh  run-yoshimi  simple.yosh
debian/upstream/: metadata
desktop/: yoshimi.desktop.in
doc/examples/themes/: largosdark.clr  retro_classic.clr
src/: CMakeLists.txt  globals.h  main.cpp  version.txt  yoshimi.desktop
src/CLI/: CmdInterpreter.cpp
src/DSP/: AnalogFilter.cpp  FFTwrapper.h  FormantFilter.cpp  SVFilter.cpp
src/Effects/: Alienwah.cpp  Chorus.cpp  Distorsion.cpp  DynamicFilter.cpp  EQ.cpp  Echo.cpp  EffectMgr.cpp  Phaser.cpp  Reverb.cpp
src/Interface/: Data2Text.cpp  GuiDataExchange.cpp  InterChange.cpp  InterChange.h  MidiDecode.cpp  MidiLearn.cpp  MidiLearn.h  Vectors.cpp
src/LV2_Plugin/: CMakeLists.txt  YoshimiLV2Plugin.cpp  YoshimiLV2Plugin.h
src/Misc/: Bank.cpp  CmdOptions.cpp  Config.cpp  Config.h  FileMgrFuncs.h  InstanceManager.cpp  Microtonal.cpp  Part.cpp  Part.h  SynthEngine.cpp  SynthEngine.h  SynthHelper.cpp  SynthHelper.h  XMLStore.cpp  ddump.cpp  ddump.h
src/MusicIO/: AlsaEngine.cpp  AlsaEngine.h  JackEngine.cpp  JackEngine.h  MusicClient.cpp  MusicClient.h  MusicIO.cpp  MusicIO.h
src/Params/: ADnoteParameters.cpp  Controller.cpp
src/Synth/: ADnote.cpp  ADnote.h  Envelope.cpp  Note.h  OscilGen.cpp  OscilGen.h  PADnote.cpp  PADnote.h  Resonance.h  SUBnote.cpp  SUBnote.h
src/UI/: BankUI.fl  ConfigUI.fl  EffUI.fl  FilterUI.fl  MasterMiscUI.fl  MasterUI.fl  MicrotonalUI.fl  MidiLearnUI.fl  MiscGui.cpp  MiscGui.h  ParametersUI.fl  PartUI.fl  WidgetPDial.cpp
